force-app/main/default/objects/Portfolio__c/Portfolio__c.object-meta.xml
<CustomObject>
    <label>Portfolio</label>
    <nameField>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>