force-app/main/default/objects/Portfolio__c/fields/SalesforceCertifications__c.field-meta.xml
<CustomField>
    <fullName>SalesforceCertifications__c</fullName>
    <label>Salesforce Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Advanced Administrator</fullName>
            </value>
            <value>
                <fullName>Platform Developer 1</fullName>
            </value>
            <value>
                <fullName>Platform Developer 2</fullName>
            </value>
            <value>
                <fullName>Platform App Builder</fullName>
            </value>
            <value>
                <fullName>Sales Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Service Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Data Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>CPQ Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>