force-app/main/default/objects/Portfolio__c/fields/Superbadges__c.field-meta.xml
<CustomField>
    <fullName>Superbadges__c</fullName>
    <label>Superbadges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Super Set</fullName>
            </value>
            <value>
                <fullName>Developer Super Set</fullName>
            </value>
            <value>
                <fullName>Consultant Super Set</fullName>
            </value>
            <value>
                <fullName>Manager Super Set</fullName>
            </value>
            <value>
                <fullName>Apex Specialist</fullName>
            </value>
            <value>
                <fullName>App Builder Super Set</fullName>
            </value>
            <value>
                <fullName>Billing Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>